Fixes some header layout issues

--- a/dev/scss/core/_mixins.scss
+++ b/dev/scss/core/_mixins.scss
@@ -15,3 +15,23 @@
     clear: both;
   }
 }
+
+/******************
+/*
+/* Vertical align
+/* Usage:
+/*
+/*  .selector {
+/*     @include vertical-align;
+/*  }
+/*
+/*
+/*****************/
+
+@mixin vertical-align {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
