--- a/dev/scss/modules/_footer.scss
+++ b/dev/scss/modules/_footer.scss
@@ -1,5 +1,7 @@
 footer {
   background-color: #202020;
+  padding: 20px;
+  margin-top: 20px;
 }
 
 .footerCont {
