--- a/dev/scss/modules/_header.scss
+++ b/dev/scss/modules/_header.scss
@@ -3,10 +3,16 @@
 // HEADER STUFF, DO NOT TOUCH!!!
 .header {
   @include container;
-  @include clearfix();
+
+  @include breakpoint($medium) {
+    margin-top: 80px;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+  }
 
   .logo {
-    @include span(1 of 1);
+    @include span(12 of 12);
 
     img {
       display: block;
@@ -17,23 +23,24 @@
 
     @include breakpoint($medium) {
       @include span(4 of 12);
+      @include vertical-align;
     }
 
   } // End logo
 
   .banner {
-    @include span(1 of 1);
+    @include span(12 of 12);
+
+    @include breakpoint($medium) {
+      @include span(8 of 12 last);
+      @include vertical-align;
+    }
 
     img {
       max-width: 100%;
       height: auto;
       margin: 0 auto;
-
-      @include breakpoint($medium) {
-        @include span(8 of 12 last);
-      }
     } // End img
   } // End banner
 } // End header
-
 
